refactor: fix PMD/SpotBugs violations and reformat code
Fix code quality issues identified by static analysis tools and apply
consistent formatting across the codebase.

**Code Quality Fixes:**

- Fix CT_CONSTRUCTOR_THROW in Ini, Options, Reg classes
  * Make classes final to prevent finalizer attacks
  * Secure constructors that throw exceptions during initialization

- Modernize JUnit test assertions
  * Replace try-catch-fail patterns with assertThrows
  * Update BeanToolTest, BasicOptionMapTest to modern JUnit 4 style
  * Remove @SuppressWarnings("empty-statement") annotations

- Fix PMD violations
  * Remove unused imports and variables
  * Improve exception handling patterns
  * Clean up code structure

**Formatting Changes:**

- Reformat all XML files with Spotless eclipseWtp formatter
  * Consistent indentation (4 spaces)
  * Trim trailing whitespace
  * End files with newline

- Java files remain Google Java Style compliant (no changes needed)

All changes are non-functional - tests remain passing (206/206).
Prepares codebase for automated CI quality gates.